test: add unit test for lc 155